demo/01.traffic.control/03.user.agent.release/03.virtual-service-safari-recommendation-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  #This is the service of the recommendation
  - recommendation-svc
  http:
  - match:
    - headers:
        baggage-user-agent:
          regex: .*Safari.*
    route:
    - destination:
        #This is the service of the recommendation
        host: recommendation-svc
        subset: version-v2
  - route:
    - destination:
        #This is the service of the recommendation
        host: recommendation-svc
        subset: version-v1
